<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.connriver.connrail.UserTypeActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:text="@string/user_single"
            android:id="@+id/rbSingle"
            android:layout_margin="@dimen/small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/user_single_desc"
            android:layout_height="wrap_content" />

        <RadioButton
            android:text="@string/user_owner"
            android:id="@+id/rbOwner"
            android:layout_margin="@dimen/small_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/user_owner_desc"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/llRemote"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/user_remote"
                android:id="@+id/rbRemote"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/actvTest"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/small_margin"
                    android:hint="@string/owner_ip_address"
                    android:inputType="number|numberDecimal"
                    android:digits="0123456789."
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <ImageButton
                android:id="@+id/btnDown"
                android:contentDescription="@string/down_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@android:drawable/arrow_down_float"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_marginStart="40dp"
            android:layout_marginBottom="@dimen/small_margin"
            android:text="@string/user_remote_desc"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btnOK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/button_ok"/>


    </LinearLayout>
</ScrollView>