<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.connriver.connrail.CarAddEdit"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etCarInitials"
                    android:maxLines="1"
                    android:hint="@string/hint_init"
                    android:maxLength="6"
                    android:inputType="textCapCharacters"
                    android:nextFocusDown="@+id/etCarNumber"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight=".3"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etCarNumber"
                    android:inputType="number"
                    android:maxLines="1"
                    android:hint="@string/hint_num"
                    android:maxLength="8"
                    android:nextFocusDown="@+id/actvCarType"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_weight=".4"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/actvCarType"
                    android:maxLines="1"
                    android:hint="@string/hint_type"
                    android:maxLength="12"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textCapWords"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/etCarNotes"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/etCarNotes"
                android:maxLines="1"
                android:hint="@string/hint_notes"
                android:inputType="textCapSentences"
                android:maxLength="32"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:nextFocusDown="@+id/btnCarSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:text="@string/hint_spots"
            android:layout_marginLeft="@dimen/tiny_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ListView
            android:id="@+id/lvCarSpots"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/small_margin"
            android:paddingRight="@dimen/small_margin"/>

        <Button
            android:id="@+id/btnSpotAdd"
            android:layout_width="match_parent"
            android:layout_margin="@dimen/small_margin"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_add"
            android:text="@string/button_add_spot"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small_margin"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCarSave"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:text="@string/button_save"/>
            <Button
                android:id="@+id/btnCarDelete"
                android:layout_width="0dp"
                android:layout_weight=".5"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:text="@string/button_delete"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>