<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.connriver.connrail.SpotAddEdit"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:text="@string/town" />

        <EditText
            android:id="@+id/etSpotTown"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textCapWords"
            android:nextFocusForward="@+id/etSpotIndustry"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:text="@string/industry" />

        <EditText
            android:id="@+id/etSpotIndustry"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:maxLines="1"
            android:maxLength="16"
            android:inputType="textCapWords"
            android:nextFocusForward="@+id/etSpotIndustry"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:text="@string/track" />

        <EditText
            android:id="@+id/etSpotTrack"
            android:maxLines="1"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginRight="@dimen/small_margin"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:inputType="textCapWords"
            android:maxLength="16"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:nextFocusForward="@+id/etCarNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSpotSave"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:text="@string/button_save"/>
            <Button
                android:id="@+id/btnSpotDelete"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:text="@string/button_delete"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>